--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
+    "@types/lodash": "^4.17.0",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
@@ -24,6 +25,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "lodash": "^4.17.21",
     "mongoose": "^8.1.3"
   }
 }
